third_party/move/move-compiler-v2/tests/more-v1/expansion/mdot_with_non_address_exp.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/expansion/mdot_with_non_address_exp.move:9:13
  │
9 │         01u8::X::bar()
  │             ^^
  │             │
  │             Unexpected '::'
  │             Expected ';'
